--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div id="main-content" class="container">
     <div class="jumbotron">
-      <img src="./assets/images/jumbotron/image-768.jpg" alt="banner picture" class="img-responsive visible-xs">
+      <img src="./assets/images/jumbotron/image2-768.png" alt="banner picture" class="img-responsive visible-xs">
     </div>
   </div>
   
