--- a/index.html
+++ b/index.html
@@ -1,61 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Grapple</title>
-    <link rel="shortcut icon" href="./assets/images/logos/logo-extra-small.png" type="image/png">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet" type="text/css">
-  </head>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Grapple</title>
+		<link rel="shortcut icon" href="./assets/images/logos/logo-extra-small.png" type="image/png">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/styles.css">
+		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet" type="text/css">
+	</head>
 <body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img"></div>
-          </a>
-          <div class="navbar-brand">
-            <a href="index.html"><h1>Grapple Labs</h1></a>
-          </div>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-          <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li>
-              <a href="products.html"><br class="hidden-xs"> Menu</a>
-            </li>
-            <li>
-              <a href="about.html"><br class="hidden-xs"> About</a>
-            </li>
-            <li>
-              <a href="contact.html"><br class="hidden-xs"> Contact Us</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+	<header>
+		<nav id="header-nav" class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<a href="index.html" class="pull-left visible-md visible-lg">
+						<div id="logo-img"></div>
+					</a>
+					<div class="navbar-brand">
+						<a href="index.html"><h1>Grapple Labs</h1></a>
+					</div>
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div id="collapsable-nav" class="collapse navbar-collapse">
+					<ul id="nav-list" class="nav navbar-nav navbar-right">
+						<li>
+							<a href="products.html"><br class="hidden-xs"> Menu</a>
+						</li>
+						<li>
+							<a href="about.html"><br class="hidden-xs"> About</a>
+						</li>
+						<li>
+							<a href="contact.html"><br class="hidden-xs"> Contact Us</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-  </header>
+	</header>
 
-  <div id="main-content" class="container">
-    <div class="jumbotron">
-      <img src="./assets/images/jumbotron/image2-768.png" alt="banner picture" class="img-responsive visible-xs">
-    </div>
-  </div>
-  
-  <!-- JScripts here -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
-  <!-- JScripts here -->
+	<div id="main-content" class="container">
+		<div class="jumbotron">
+			<img src="./assets/images/jumbotron/image2-768.png" alt="banner picture" class="img-responsive visible-xs">
+		</div>
+
+		<div id="home-tiles" class="row">
+			<div class="col-md-4 col-sm-6 col-xs-12">
+				<a href="image-products.html"><div id="image-products-tile"><span>menu</span></div></a>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12">
+				<a href="nlp-products.html"><div id="nlp-products-tile"><span>specials</span></div></a>
+			</div>
+			<div class="col-md-4 col-sm-12 col-xs-12">
+				<a href="" target="_blank">
+					<div id="map-tile">
+						<span>map</span>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+	
+	<!-- JScripts here -->
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
+	<!-- JScripts here -->
 </body>
 </html>
