--- a/about.html
+++ b/about.html
@@ -46,29 +46,9 @@
 	</header>
 
 	<div id="main-content" class="container">
-		<div class="jumbotron">
-			<img src="./assets/images/jumbotron/image2-768.png" alt="banner picture" class="img-responsive visible-xs">
+		<div id="still-building" class="text-center">
+			<span>Still building...</span>
 		</div>
-
-		<div id="categories-title" class="text-center">
-			<span>Categories</span>
-			<hr>
-		</div>
-		<div id="home-tiles" class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="products.html"><div id="image-products-tile"><span>Image based</span></div></a>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="products.html"><div id="nlp-products-tile"><span>NLP based</span></div></a>
-			</div>
-			<div class="col-md-4 col-sm-12 col-xs-12">
-				<a href="" target="_blank">
-					<div id="map-tile">
-						<span>LOCATION BASED</span>
-					</div>
-				</a>
-			</div>
-		</div><!-- end of home tiles -->
 	</div><!-- end of main content-->
 	
 	<footer class="panel-footer">
